--- a/_posts/2020-07-22-demo.md
+++ b/_posts/2020-07-22-demo.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 current: post
-cover:  /assets/images/welcome.jpg
+cover:  {{ site.baseurl }}assets/images/welcome.jpg
 navigation: True
 title: Getting started
 date: 2020-07-22
