--- a/_posts/2020-07-25-workflow.md
+++ b/_posts/2020-07-25-workflow.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 current: post
-cover:  assets/images/2020-07-25-workflow/cover.png
+cover:  assets/images/2020-07-25-workflow/cover.jpeg
 navigation: True
 title: Submit a blog post using git and GitHub
 date: 2020-07-25 11:00:00
