This is the first draft of the climate-migration post
pconcha first post

--- a/_bibliography/library.bib
+++ b/_bibliography/library.bib
@@ -8,3 +8,72 @@
   number = {4},
   open = {true}
 }
+
+@article{ABEL2019,
+title = {Climate, conflict and forced migration},
+journal = {Global Environmental Change},
+volume = {54},
+pages = {239 - 249},
+year = {2019},
+issn = {0959-3780},
+doi = {10.1016/j.gloenvcha.2018.12.003},
+url = {http://www.sciencedirect.com/science/article/pii/S0959378018301596},
+author = {{Abel} and Brottrager,Michael  and Crespo Cuaresma,Jesus and Muttarak,Raya},
+keywords = {Asylum seeker, Climate change, Conflict, Endogenous selection, Forced migration, Gravity model, Refugee, Simultaneous equations, SPEI},
+abstract = {Despite the lack of robust empirical evidence, a growing number of media reports attempt to link climate change to the ongoing violent conflicts in Syria and other parts of the world, as well as to the migration crisis in Europe. Exploiting bilateral data on asylum seeking applications for 157 countries over the period 2006–2015, we assess the determinants of refugee flows using a gravity model which accounts for endogenous selection in order to examine the causal link between climate, conflict and forced migration. Our results indicate that climatic conditions, by affecting drought severity and the likelihood of armed conflict, played a significant role as an explanatory factor for asylum seeking in the period 2011–2015. The effect of climate on conflict occurrence is particularly relevant for countries in Western Asia in the period 2010–2012 during when many countries were undergoing political transformation. This finding suggests that the impact of climate on conflict and asylum seeking flows is limited to specific time period and contexts.}
+}
+
+@article{ZEITOUN2016,
+title = {Reductionist and integrative research approaches to complex water security policy challenges},
+journal = {Global Environmental Change},
+volume = {39},
+pages = {143 - 154},
+year = {2016},
+issn = {0959-3780},
+doi = {10.1016/j.gloenvcha.2016.04.010},
+url = {http://www.sciencedirect.com/science/article/pii/S0959378016300541},
+author = {{Zeitoun,Mark} and Lankford, Bruce and Krueger,Tobias and Tim Forsyth and Richard Carter and Arjen Y. Hoekstra and Richard Taylor and Olli Varis and Frances Cleaver and Rutgerd Boelens and Larry Swatuk and David Tickner and Christopher A. Scott and Naho Mirumachi and Nathanial Matthews},
+keywords = {Water security, Environmental complexity, Uncertainty, Water conflicts, Eco-sociological challenges},
+abstract = {This article reviews and contrasts two approaches that water security researchers employ to advance understanding of the complexity of water-society policy challenges. A prevailing reductionist approach seeks to represent uncertainty through calculable risk, links national GDP tightly to hydro-climatological causes, and underplays diversity and politics in society. When adopted uncritically, this approach limits policy-makers to interventions that may reproduce inequalities, and that are too rigid to deal with future changes in society and climate. A second, more integrative, approach is found to address a range of uncertainties, explicitly recognise diversity in society and the environment, incorporate water resources that are less-easily controlled, and consider adaptive approaches to move beyond conventional supply-side prescriptions. The resultant policy recommendations are diverse, inclusive, and more likely to reach the marginalised in society, though they often encounter policy-uptake obstacles. The article concludes by defining a route towards more effective water security research and policy, which stresses analysis that matches the state of knowledge possessed, an expanded research agenda, and explicitly addresses inequities.}
+}
+
+@article{Wesselbaum2019,
+author = {Wesselbaum, Dennis},
+title = {The Influence of Climate on Migration},
+journal = {Australian Economic Review},
+volume = {52},
+number = {3},
+pages = {363-372},
+doi = {10.1111/1467-8462.12345},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/1467-8462.12345},
+eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/1467-8462.12345},
+abstract = {Abstract This paper provides an overview of research into the phenomenon of whether climatic factors, such as temperature and weather-related disasters, affect the decision to migrate. As an example, we examine migration flows from 198 countries to Australia for the time span from 1980 to 2015. Our results show that temperature does not have a robust, significant effect on migration flows, while weather-related disasters do significantly affect flows to Australia.},
+year = {2019}
+}
+
+@article{Borderon2019,
+author = {Borderon, Marion and Sakdapolrak, Patrick and Muttarak, Raya and Kebede, Endale and Pagogna, Raffaella and Sporer, Eva},
+title={{Migration influenced by environmental change in Africa: A systematic review of empirical evidence}},
+journal = {Demographic Research},
+volume = {41},
+number = {18},
+pages = {491--544},
+doi = {10.4054/DemRes.2019.41.18},
+year = {2019},
+URL = {https://www.demographic-research.org/volumes/vol41/18/},
+eprint = {https://www.demographic-research.org/volumes/vol41/18/41-18.pdf}
+}
+
+@article{Piguet2010,
+author = {Piguet, Etienne},
+title = {Linking climate change, environmental degradation, and migration: a methodological overview},
+journal = {WIREs Climate Change},
+volume = {1},
+number = {4},
+pages = {517-524},
+doi = {10.1002/wcc.54},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/wcc.54},
+eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/wcc.54},
+abstract = {Abstract Empirical research focusing on the links between climate change, environmental degradation, and forced migration has risen significantly in recent years and uses an impressive variety of methods. The present article suggests a typology identifying six research method families: ecological inference based on area characteristics, individual sample surveys, time series, multilevel analysis, agent-based modeling (ABM), and qualitative/ethnographic studies. The main technical features and empirical results of each family of methods are presented and critically discussed. We conclude by calling for a coordinated international effort to improve the quality and variety of data that could be used with existing research methods and significantly improve our understanding of the migration-environment nexus. Copyright © 2010 John Wiley \& Sons, Ltd. This article is categorized under: Vulnerability and Adaptation to Climate Change > Learning from Cases and Analogies},
+year = {2010}
+}
